tests/fixtures/invalid/none_add_int.py
# Cannot add None and Int
x: int = None + 1
